[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "levistock"
version = "0.1.3"
description = "A股市场数据SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0", "tqdm>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["levistock*"]